--- a/escom-bpm-web/src/main/webapp/resources/css/icons.css
+++ b/escom-bpm-web/src/main/webapp/resources/css/icons.css
@@ -47,6 +47,7 @@
 .ico_subproc{background-image: url('../resources/icon/subproc-16.png') !important;}
 .ico_look{background-image: url('../resources/icon/look.png') !important;}
 
+.ico_loop-16{background-image: url('../resources/icon/refresh-16.png') !important;}
 .ico-open-16{background-image: url('../resources/icon/open-16.png') !important;}
 .ico_doc-16{background-image: url('../resources/icon/document-16.png') !important;}
 .ico_16_inspector{background-image: url('../resources/icon/inspector.png') !important;}
