--- a/escom-bpm-web/src/main/webapp/view/docs/docStatus/docstatus-list.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/docStatus/docstatus-list.xhtml
@@ -58,7 +58,7 @@
                             </h:outputLabel>
                         </f:facet>
                         <f:facet name="input">
-                            <p:calendar value="#{item.dateStatus}"                                     
+                            <p:calendar value="#{item.dateStatus}" inputStyle="width: 145px;"                                   
                                         required="#{param['isRequired'] == 'true'}"
                                         disabled="#{ _bean.isReadOnly()}"
                                         locale="#{sessionBean.locale}"                                    
