--- a/escom-bpm-web/src/main/webapp/view/index.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/index.xhtml
@@ -357,8 +357,8 @@
                     </h:panelGrid>
                 </p:panelGrid>
                 <p:separator/>
-                <p:link href="#{sessionBean.makePageURL('/login')}" value="#{bundle.GotoLogin}" style="float: right;" rendered="false"/>
-                <p:link href="http://www.escom-bpm.com" value="#{bundle.EscomWWW}" style="float: right;" />
+                <p:link href="#{sessionBean.makePageURL('/login')}" value="#{bundle.GotoLogin}" style="float: right;" />
+                <p:link href="http://www.escom-bpm.com" value="#{bundle.EscomWWW}" style="float: right;" rendered="false"/>
             </p:panelGrid>
         </p:dialog>
         
