--- a/escom-bpm-web/src/main/webapp/view/processes/elements/timer-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/timer-card.xhtml
@@ -32,7 +32,7 @@
 
                     <h:panelGrid id="pnDateStart" columns="2" styleClass="without-spaces" >
                         <p:outputLabel value="#{bundle.DateStart}:" indicateRequired="true" rendered="#{timerCardBean.procTimer.startType eq 'on_date'}" />
-                        <p:calendar value="#{timerCardBean.procTimer.startDate}"                
+                        <p:calendar value="#{timerCardBean.procTimer.startDate}" inputStyle="width: 145px;"            
                                     rendered="#{timerCardBean.procTimer.startType eq 'on_date'}"
                                     disabled="#{timerCardBean.procTimer.startType ne 'on_date'}"
                                     showHour="true" showMinute="true" pattern="dd.MM.yyyy HH:mm"
