--- a/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
@@ -23,8 +23,7 @@
     <ui:param name="_lbGroupName"      value="#{bundle.Folders}"/>  
     <ui:param name="_CreateGroupLabel" value="#{bundle.CreateFolder}" />
     <ui:param name="_CreateItemLabel"  value="#{bundle.CreateDoc}" />
-    <ui:param name="_canUploadToFile"  value="#{true}"/>
-    <ui:param name="_updates"          value="mainFRM:fileUploadFRM" />
+    <ui:param name="_updates"          value="" />
     
     <!-- специфичные поля поиска -->
     <ui:define name="searche"> 
@@ -70,7 +69,7 @@
         <h:panelGroup id="pnDateDocSearche" styleClass="ui-grid-col-12"> 
             <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-1, ui-grid-col-11" rendered="#{_bean.model.dateDocSearche}" styleClass="ui-grid-col-12">
                 <p:outputLabel value="#{bundle.With}:"/>
-                <p:calendar value="#{_bean.model.dateDocStart}" id="dateDocStart" 
+                <p:calendar value="#{_bean.model.dateDocStart}" id="dateDocStart" inputStyle="width: 145px;"
                             widgetVar="dateDocStartSearche"
                             navigator="true" yearRange="c-120:c+20"
                             locale="#{sessionBean.locale}"
@@ -81,7 +80,7 @@
             </p:panelGrid>
             <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-1, ui-grid-col-1" rendered="#{_bean.model.dateDocSearche}" styleClass="ui-grid-col-12">
                 <p:outputLabel value="#{bundle.At}:" />
-                <p:calendar value="#{_bean.model.dateDocEnd}" id="dateDocEnd"
+                <p:calendar value="#{_bean.model.dateDocEnd}" id="dateDocEnd" inputStyle="width: 145px;"
                             widgetVar="dateDocEndSearche"
                             navigator="true" yearRange="c-120:c+20"
                             locale="#{sessionBean.locale}"
@@ -122,7 +121,10 @@
         </p:commandButton>
         <p:commandButton id="createItemBtn" actionListener="#{_bean.onCreateDetailItem()}" style="display: none;">
            <p:ajax event="dialogReturn" update="mainFRM" listener="#{_bean.onUpdateAfterCloseForm}" oncomplete="initDND();"/>
-       </p:commandButton>         
+        </p:commandButton>         
+        <p:commandButton id="btnOpenFilesUploadFRM" actionListener="#{_bean.onOpenUploadFilesFrm()}" style="display: none;">
+           <p:ajax event="dialogReturn" update="mainFRM" listener="#{_bean.onUpdateAfterCloseForm}" oncomplete="initDND();"/>
+       </p:commandButton>  
     </ui:define>
 
     <!-- специфичные поля таблицы обозревателя -->
@@ -231,10 +233,21 @@
         </p:menuButton>        
     </ui:define>
     
+    <!-- специфичные пункты контекстного меню дерева -->
+    <ui:define name="treeContextMenu" >
+        <p:separator/>
+        <p:menuitem icon="ui-icon-arrowthickstop-1-n" value="#{bundle.UploadFilesCreateDocs}" 
+                    onclick="document.getElementById('mainFRM:btnOpenFilesUploadFRM').click();">
+        </p:menuitem>
+        <p:menuitem icon="ui-icon-arrowthickstop-1-s" value="#{bundle.UploadToFile}"                     
+                    ajax="false"
+                    oncomplete="initDND();"
+                    action="#{_bean.onUploadToFile()}">
+            <p:confirm header="#{bundle.ConfirmAction}" message="#{bundle.ConfirmCreateZIPFolder}" icon="ui-icon-alert" />
+        </p:menuitem>
+    </ui:define>
+    
     <ui:define name="centerFormFooter">
-        <h:panelGroup rendered="#{!_bean.selectorViewMode}">
-            <ui:include src="/view/common/file-uppload.xhtml" />
-        </h:panelGroup>
     </ui:define>
     
     <ui:define name="form_scripts">         
