--- a/escom-bpm-web/src/main/webapp/view/messages/messages.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/messages/messages.xhtml
@@ -45,7 +45,7 @@
                     <p:panelGrid columns="2" columnClasses="without-spaces" styleClass="without-spaces">
                         <p:panelGrid columns="2" styleClass="without-spaces">
                             #{bundle.With}
-                            <p:calendar value="#{userMsgBean.dateStart}" id="dateStart"
+                            <p:calendar value="#{userMsgBean.dateStart}" id="dateStart" inputStyle="width: 145px;"
                                         widgetVar="dateCreateStartSearche"
                                         showHour="true" showMinute="true" pages="2"
                                         navigator="true" yearRange="c-12:c+20"
@@ -56,7 +56,7 @@
                                         requiredMessage="#{bundle.Field} [#{bundle.DateStart}  #{bundle.MustBeFilled}">
                             </p:calendar>
                             #{bundle.At}
-                            <p:calendar value="#{userMsgBean.dateEnd}" id="dateEnd"
+                            <p:calendar value="#{userMsgBean.dateEnd}" id="dateEnd" inputStyle="width: 145px;"
                                         widgetVar="dateCreateEndSearche"
                                         navigator="true" yearRange="c-12:c+20" pages="2"
                                         showHour="true" showMinute="true"
