--- a/escom-bpm-web/src/main/webapp/view/tasks/task-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/tasks/task-card.xhtml
@@ -12,13 +12,13 @@
     
     <ui:define name="CardToolButtons" > 
         <p:commandButton icon="ico_process" title="#{bundle.GoToProcess}" 
-                        rendered="#{taskCardBean.process != null}"
+                        rendered="#{taskCardBean.process != null and _bean.editedItem.id != null}"
                         actionListener="#{taskCardBean.onOpenProcess()}"/>
         <p:commandButton icon="ico_doc-16" title="#{bundle.GoToDocument}" 
-                        rendered="#{taskCardBean.process != null}"
+                        rendered="#{taskCardBean.process != null and _bean.editedItem.id != null}"
                         actionListener="#{taskCardBean.onOpenDocument()}"/>
         <p:commandButton icon="ico_look" value="#{bundle.ViewDoc}" title="#{bundle.ViewDoc}" 
-                        rendered="#{taskCardBean.process != null}"
+                        rendered="#{taskCardBean.process != null and _bean.editedItem.id != null}"
                         actionListener="#{taskCardBean.onViewDocument()}"/>
     </ui:define>
     
@@ -70,7 +70,7 @@
                     <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces">
                         <p:outputLabel value="#{bundle.DateBegin}:" indicateRequired="true" rendered="#{taskCardBean.isShowExtTaskAtr()}"/>
                         <p:calendar value="#{taskCardBean.editedItem.beginDate}" disabledWeekends="true" 
-                                    styleClass="without-spaces" rendered="#{taskCardBean.isShowExtTaskAtr()}"                                     
+                                    inputStyle="width: 145px;" rendered="#{taskCardBean.isShowExtTaskAtr()}"                                     
                                     disabled="#{taskCardBean.readOnly}"
                                     locale="#{sessionBean.locale}" 
                                     timeZone="#{TimeZone.getDefault()}" 
@@ -82,7 +82,7 @@
                         </p:calendar>
 
                         <p:outputLabel value="#{bundle.DateAppointment}:" rendered="#{taskCardBean.editedItem.scheme != null and taskCardBean.editedItem.state.currentState.id ne DictStates.STATE_DRAFT}"/>
-                        <p:calendar value="#{taskCardBean.editedItem.beginDate}" disabledWeekends="true" styleClass="without-spaces" 
+                        <p:calendar value="#{taskCardBean.editedItem.beginDate}" disabledWeekends="true" inputStyle="width: 145px;" 
                                     rendered="#{taskCardBean.editedItem.scheme != null and taskCardBean.editedItem.state.currentState.id ne DictStates.STATE_DRAFT}"                                
                                     disabled="true"
                                     locale="#{sessionBean.locale}" 
@@ -122,7 +122,7 @@
                                 </h:panelGroup>
 
                                 <p:calendar id="planEndDate" value="#{taskCardBean.editedItem.planExecDate}" disabledWeekends="true" 
-                                            styleClass="without-spaces" pages="2"
+                                            inputStyle="width: 145px;" pages="2"
                                             timeZone="#{TimeZone.getDefault()}"
                                             showHour="true" showMinute="true" pattern="dd.MM.yyyy HH:mm"
                                             disabled="#{taskCardBean.isTaskReadOnly() or taskCardBean.editedItem.deadLineType eq 'delta'}"
@@ -138,7 +138,7 @@
                         <p:outputLabel value="#{bundle.ActualEndDate}:" rendered="#{taskCardBean.editedItem.state.currentState.id eq DictStates.STATE_COMPLETED}"/>
                         <p:calendar value="#{taskCardBean.editedItem.factExecDate}" disabledWeekends="true" 
                                     rendered="#{taskCardBean.editedItem.state.currentState.id eq DictStates.STATE_COMPLETED}"
-                                    styleClass="without-spaces" 
+                                    inputStyle="width: 145px;" 
                                     timeZone="#{TimeZone.getDefault()}"
                                     showHour="true" showMinute="true" pattern="dd.MM.yyyy HH:mm"
                                     disabled="#{taskCardBean.readOnly}"
@@ -197,35 +197,7 @@
             </p:panelGrid>
         </p:tab>
 
-        <p:tab title="#{bundle.Execution}" rendered="#{taskCardBean.editedItem.state.currentState.id ne DictStates.STATE_DRAFT}">
-            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces"> 
-                <h:panelGroup id="btnTaskExe">
-                    <ui:repeat value="#{taskCardBean.taskResults}" var="result" rendered="#{taskCardBean.isShowBtnResults()}" >
-                        <p:commandButton value="#{resultBean.getLabelFromBundle(result.getName())}" 
-                                         update="mainFRM"
-                                         icon="#{'ico_'.concat(result.getIconName())}"
-                                         disabled="#{!taskCardBean.haveRightExec}" 
-                                         oncomplete="document.getElementById('mainFRM:btnExecute').click();"
-                                         actionListener="#{taskCardBean.setResultName(result.getName())}">                        
-                            <f:param name="isRequired" value="true"/>
-                        </p:commandButton>
-                    </ui:repeat>
-                </h:panelGroup>                
-                
-                <p:outputLabel value="#{bundle.ReportExe}:" indicateRequired="true"/>                
-                <p:textEditor value="#{taskCardBean.editedItem.comment}" 
-                              readonly="#{taskCardBean.typeEdit eq DictEditMode.VIEW_MODE
-                                          or !taskCardBean.haveRightExec
-                                          or taskCardBean.editedItem.state.currentState.id ne DictStates.STATE_RUNNING }"
-                              height="300" styleClass="ui-grid-col-12"/> 
-                
-                <h:panelGroup rendered="#{taskCardBean.editedItem.reports.size() > 1}" styleClass="without-spaces">
-                    <p:outputLabel value="#{bundle.ReportsExe}:"/>
-                    <ui:include src="/view/tasks/reports.xhtml"/>
-                </h:panelGroup>                
-                
-            </p:panelGrid>
-        </p:tab>
+        <ui:include src="/view/tasks/tabs/execution.xhtml"/>                
             
         <p:tab title="#{bundle.Reminder}" rendered="#{taskCardBean.editedItem.state.currentState.id ne DictStates.STATE_COMPLETED}">
             <ui:include src="/view/tasks/task-remaind.xhtml"/>
