--- a/escom-bpm-web/src/main/webapp/view/users/groupsUsers/usergroup-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/groupsUsers/usergroup-card.xhtml
@@ -34,7 +34,8 @@
         </p:tab>
         <p:tab title="#{bundle.Users}" rendered="#{_bean.editedItem.typeActualize == 0}"> 
             <ui:include src="/view/common/dict-item-groups.xhtml" >
-                <ui:param name="_groups" value="#{userGroupsCardBean.editedItem.usersList}" />    
+                <ui:param name="_groups" value="#{userGroupsCardBean.editedItem.usersList}" /> 
+                <ui:param name="_image" value="user20.png" />
                 <ui:param name="_selectorBean" value="#{userBean}" />
                 <ui:param name="_showOwner" value="#{false}" />
             </ui:include>
